"""Elder gRPC servicer implementation."""

import grpc
import structlog
from datetime import datetime
from typing import Optional

from apps.api.grpc.generated import (
    elder_pb2,
    elder_pb2_grpc,
    common_pb2,
    organization_pb2,
    entity_pb2,
    dependency_pb2,
    graph_pb2,
    auth_pb2,
)

from apps.api.models import (
    Organization,
    Entity,
    Dependency,
    Identity,
)
from apps.api.grpc.converters import (
    organization_to_proto,
    entity_to_proto,
    dependency_to_proto,
    identity_to_proto,
)
from shared.database import db

logger = structlog.get_logger(__name__)


class ElderServicer(elder_pb2_grpc.ElderServiceServicer):
    """Implementation of ElderService gRPC servicer."""

    def __init__(self):
        """Initialize the servicer."""
        super().__init__()
        logger.info("elder_servicer_initialized")

    # ========================================================================
    # Helper Methods
    # ========================================================================

    def _create_timestamp(self, dt: Optional[datetime]) -> common_pb2.Timestamp:
        """Convert datetime to protobuf Timestamp."""
        if dt is None:
            return common_pb2.Timestamp(seconds=0, nanos=0)

        timestamp = int(dt.timestamp())
        nanos = dt.microsecond * 1000
        return common_pb2.Timestamp(seconds=timestamp, nanos=nanos)

    def _create_pagination_response(
        self, page: int, per_page: int, total: int
    ) -> common_pb2.PaginationResponse:
        """Create pagination response."""
        pages = (total + per_page - 1) // per_page if per_page > 0 else 0
        return common_pb2.PaginationResponse(
            page=page,
            per_page=per_page,
            total=total,
            pages=pages,
        )

    def _create_status_response(
        self, success: bool, message: str, details: dict = None
    ) -> common_pb2.StatusResponse:
        """Create status response."""
        return common_pb2.StatusResponse(
            success=success,
            message=message,
            details=details or {},
        )

    def _handle_exception(self, context, e: Exception, operation: str):
        """Handle exceptions and set gRPC context."""
        logger.error(f"grpc_{operation}_error", error=str(e), exc_info=True)
        context.set_code(grpc.StatusCode.INTERNAL)
        context.set_details(f"{operation} failed: {str(e)}")

    # ========================================================================
    # Authentication & Identity Management (11 methods)
    # ========================================================================

    def Login(self, request, context):
        """Authenticate user and return JWT tokens."""
        try:
            # TODO: Implement login logic
            # For now, return placeholder
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("Login not yet implemented")
            return auth_pb2.LoginResponse()
        except Exception as e:
            self._handle_exception(context, e, "login")
            return auth_pb2.LoginResponse()

    def RefreshToken(self, request, context):
        """Refresh access token using refresh token."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("RefreshToken not yet implemented")
            return auth_pb2.RefreshTokenResponse()
        except Exception as e:
            self._handle_exception(context, e, "refresh_token")
            return auth_pb2.RefreshTokenResponse()

    def Logout(self, request, context):
        """Logout and invalidate tokens."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("Logout not yet implemented")
            return auth_pb2.LogoutResponse()
        except Exception as e:
            self._handle_exception(context, e, "logout")
            return auth_pb2.LogoutResponse()

    def GetCurrentIdentity(self, request, context):
        """Get current authenticated identity."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("GetCurrentIdentity not yet implemented")
            return auth_pb2.GetCurrentIdentityResponse()
        except Exception as e:
            self._handle_exception(context, e, "get_current_identity")
            return auth_pb2.GetCurrentIdentityResponse()

    def ChangePassword(self, request, context):
        """Change password for current user."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("ChangePassword not yet implemented")
            return auth_pb2.ChangePasswordResponse()
        except Exception as e:
            self._handle_exception(context, e, "change_password")
            return auth_pb2.ChangePasswordResponse()

    def RegisterIdentity(self, request, context):
        """Register new identity."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("RegisterIdentity not yet implemented")
            return auth_pb2.RegisterIdentityResponse()
        except Exception as e:
            self._handle_exception(context, e, "register_identity")
            return auth_pb2.RegisterIdentityResponse()

    def ValidateToken(self, request, context):
        """Validate access token."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("ValidateToken not yet implemented")
            return auth_pb2.ValidateTokenResponse()
        except Exception as e:
            self._handle_exception(context, e, "validate_token")
            return auth_pb2.ValidateTokenResponse()

    def ListIdentities(self, request, context):
        """List identities with pagination and filters."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("ListIdentities not yet implemented")
            return auth_pb2.ListIdentitiesResponse()
        except Exception as e:
            self._handle_exception(context, e, "list_identities")
            return auth_pb2.ListIdentitiesResponse()

    def GetIdentity(self, request, context):
        """Get identity by ID."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("GetIdentity not yet implemented")
            return auth_pb2.GetIdentityResponse()
        except Exception as e:
            self._handle_exception(context, e, "get_identity")
            return auth_pb2.GetIdentityResponse()

    def UpdateIdentity(self, request, context):
        """Update identity."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("UpdateIdentity not yet implemented")
            return auth_pb2.UpdateIdentityResponse()
        except Exception as e:
            self._handle_exception(context, e, "update_identity")
            return auth_pb2.UpdateIdentityResponse()

    def DeleteIdentity(self, request, context):
        """Delete identity."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("DeleteIdentity not yet implemented")
            return auth_pb2.DeleteIdentityResponse()
        except Exception as e:
            self._handle_exception(context, e, "delete_identity")
            return auth_pb2.DeleteIdentityResponse()

    # ========================================================================
    # Organization Management (7 methods)
    # ========================================================================

    def ListOrganizations(self, request, context):
        """List organizations with pagination and filters."""
        try:
            # Get pagination params
            page = request.pagination.page or 1
            per_page = request.pagination.per_page or 50

            # Build query
            query = Organization.query

            # Apply parent_id filter if provided
            if request.parent_id:
                query = query.filter(Organization.parent_id == request.parent_id)

            # Get total count
            total = query.count()

            # Apply pagination
            orgs = query.offset((page - 1) * per_page).limit(per_page).all()

            # Convert to protobuf
            org_protos = [organization_to_proto(org) for org in orgs]

            return organization_pb2.ListOrganizationsResponse(
                organizations=org_protos,
                pagination=self._create_pagination_response(page, per_page, total),
            )
        except Exception as e:
            self._handle_exception(context, e, "list_organizations")
            return organization_pb2.ListOrganizationsResponse()

    def GetOrganization(self, request, context):
        """Get organization by ID."""
        try:
            org = Organization.query.get(request.id)
            if not org:
                context.set_code(grpc.StatusCode.NOT_FOUND)
                context.set_details(f"Organization {request.id} not found")
                return organization_pb2.GetOrganizationResponse()

            return organization_pb2.GetOrganizationResponse(
                organization=organization_to_proto(org)
            )
        except Exception as e:
            self._handle_exception(context, e, "get_organization")
            return organization_pb2.GetOrganizationResponse()

    def CreateOrganization(self, request, context):
        """Create new organization."""
        try:
            # Create organization
            org = Organization(
                parent_id=request.parent_id if request.parent_id else None,
                name=request.name,
                description=request.description,
                ldap_dn=request.ldap_dn if request.ldap_dn else None,
                saml_group=request.saml_group if request.saml_group else None,
                owner_identity_id=request.owner_identity_id if request.owner_identity_id else None,
                owner_group_id=request.owner_group_id if request.owner_group_id else None,
                metadata=dict(request.metadata) if request.metadata else {},
            )

            db.session.add(org)
            db.session.commit()

            logger.info("grpc_organization_created", org_id=org.id, name=org.name)

            return organization_pb2.CreateOrganizationResponse(
                organization=organization_to_proto(org)
            )
        except Exception as e:
            db.session.rollback()
            self._handle_exception(context, e, "create_organization")
            return organization_pb2.CreateOrganizationResponse()

    def UpdateOrganization(self, request, context):
        """Update existing organization."""
        try:
            org = Organization.query.get(request.id)
            if not org:
                context.set_code(grpc.StatusCode.NOT_FOUND)
                context.set_details(f"Organization {request.id} not found")
                return organization_pb2.UpdateOrganizationResponse()

            # Update fields if provided (proto3 optional fields)
            if request.HasField("parent_id"):
                org.parent_id = request.parent_id if request.parent_id else None
            if request.HasField("name"):
                org.name = request.name
            if request.HasField("description"):
                org.description = request.description
            if request.HasField("ldap_dn"):
                org.ldap_dn = request.ldap_dn if request.ldap_dn else None
            if request.HasField("saml_group"):
                org.saml_group = request.saml_group if request.saml_group else None
            if request.HasField("owner_identity_id"):
                org.owner_identity_id = request.owner_identity_id if request.owner_identity_id else None
            if request.HasField("owner_group_id"):
                org.owner_group_id = request.owner_group_id if request.owner_group_id else None
            if request.metadata:
                org.metadata = dict(request.metadata)

            db.session.commit()

            logger.info("grpc_organization_updated", org_id=org.id)

            return organization_pb2.UpdateOrganizationResponse(
                organization=organization_to_proto(org)
            )
        except Exception as e:
            db.session.rollback()
            self._handle_exception(context, e, "update_organization")
            return organization_pb2.UpdateOrganizationResponse()

    def DeleteOrganization(self, request, context):
        """Delete organization."""
        try:
            org = Organization.query.get(request.id)
            if not org:
                context.set_code(grpc.StatusCode.NOT_FOUND)
                context.set_details(f"Organization {request.id} not found")
                return organization_pb2.DeleteOrganizationResponse()

            db.session.delete(org)
            db.session.commit()

            logger.info("grpc_organization_deleted", org_id=request.id)

            return organization_pb2.DeleteOrganizationResponse(
                status=self._create_status_response(
                    success=True,
                    message=f"Organization {request.id} deleted successfully"
                )
            )
        except Exception as e:
            db.session.rollback()
            self._handle_exception(context, e, "delete_organization")
            return organization_pb2.DeleteOrganizationResponse()

    def GetOrganizationChildren(self, request, context):
        """Get organization children."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("GetOrganizationChildren not yet implemented")
            return organization_pb2.GetOrganizationChildrenResponse()
        except Exception as e:
            self._handle_exception(context, e, "get_organization_children")
            return organization_pb2.GetOrganizationChildrenResponse()

    def GetOrganizationHierarchy(self, request, context):
        """Get organization hierarchy."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("GetOrganizationHierarchy not yet implemented")
            return organization_pb2.GetOrganizationHierarchyResponse()
        except Exception as e:
            self._handle_exception(context, e, "get_organization_hierarchy")
            return organization_pb2.GetOrganizationHierarchyResponse()

    # ========================================================================
    # Entity Management (7 methods)
    # ========================================================================

    def ListEntities(self, request, context):
        """List entities with pagination and filters."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("ListEntities not yet implemented")
            return entity_pb2.ListEntitiesResponse()
        except Exception as e:
            self._handle_exception(context, e, "list_entities")
            return entity_pb2.ListEntitiesResponse()

    def GetEntity(self, request, context):
        """Get entity by ID or unique_id."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("GetEntity not yet implemented")
            return entity_pb2.GetEntityResponse()
        except Exception as e:
            self._handle_exception(context, e, "get_entity")
            return entity_pb2.GetEntityResponse()

    def CreateEntity(self, request, context):
        """Create new entity."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("CreateEntity not yet implemented")
            return entity_pb2.CreateEntityResponse()
        except Exception as e:
            self._handle_exception(context, e, "create_entity")
            return entity_pb2.CreateEntityResponse()

    def UpdateEntity(self, request, context):
        """Update existing entity."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("UpdateEntity not yet implemented")
            return entity_pb2.UpdateEntityResponse()
        except Exception as e:
            self._handle_exception(context, e, "update_entity")
            return entity_pb2.UpdateEntityResponse()

    def DeleteEntity(self, request, context):
        """Delete entity."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("DeleteEntity not yet implemented")
            return entity_pb2.DeleteEntityResponse()
        except Exception as e:
            self._handle_exception(context, e, "delete_entity")
            return entity_pb2.DeleteEntityResponse()

    def GetEntityDependencies(self, request, context):
        """Get entity dependencies."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("GetEntityDependencies not yet implemented")
            return entity_pb2.GetEntityDependenciesResponse()
        except Exception as e:
            self._handle_exception(context, e, "get_entity_dependencies")
            return entity_pb2.GetEntityDependenciesResponse()

    def BatchCreateEntities(self, request, context):
        """Batch create entities."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("BatchCreateEntities not yet implemented")
            return entity_pb2.BatchCreateEntitiesResponse()
        except Exception as e:
            self._handle_exception(context, e, "batch_create_entities")
            return entity_pb2.BatchCreateEntitiesResponse()

    # ========================================================================
    # Dependency Management (7 methods)
    # ========================================================================

    def ListDependencies(self, request, context):
        """List dependencies with pagination and filters."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("ListDependencies not yet implemented")
            return dependency_pb2.ListDependenciesResponse()
        except Exception as e:
            self._handle_exception(context, e, "list_dependencies")
            return dependency_pb2.ListDependenciesResponse()

    def GetDependency(self, request, context):
        """Get dependency by ID."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("GetDependency not yet implemented")
            return dependency_pb2.GetDependencyResponse()
        except Exception as e:
            self._handle_exception(context, e, "get_dependency")
            return dependency_pb2.GetDependencyResponse()

    def CreateDependency(self, request, context):
        """Create new dependency."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("CreateDependency not yet implemented")
            return dependency_pb2.CreateDependencyResponse()
        except Exception as e:
            self._handle_exception(context, e, "create_dependency")
            return dependency_pb2.CreateDependencyResponse()

    def UpdateDependency(self, request, context):
        """Update existing dependency."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("UpdateDependency not yet implemented")
            return dependency_pb2.UpdateDependencyResponse()
        except Exception as e:
            self._handle_exception(context, e, "update_dependency")
            return dependency_pb2.UpdateDependencyResponse()

    def DeleteDependency(self, request, context):
        """Delete dependency."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("DeleteDependency not yet implemented")
            return dependency_pb2.DeleteDependencyResponse()
        except Exception as e:
            self._handle_exception(context, e, "delete_dependency")
            return dependency_pb2.DeleteDependencyResponse()

    def BulkCreateDependencies(self, request, context):
        """Bulk create dependencies."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("BulkCreateDependencies not yet implemented")
            return dependency_pb2.BulkCreateDependenciesResponse()
        except Exception as e:
            self._handle_exception(context, e, "bulk_create_dependencies")
            return dependency_pb2.BulkCreateDependenciesResponse()

    def BulkDeleteDependencies(self, request, context):
        """Bulk delete dependencies."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("BulkDeleteDependencies not yet implemented")
            return dependency_pb2.BulkDeleteDependenciesResponse()
        except Exception as e:
            self._handle_exception(context, e, "bulk_delete_dependencies")
            return dependency_pb2.BulkDeleteDependenciesResponse()

    # ========================================================================
    # Graph Operations (4 methods)
    # ========================================================================

    def GetDependencyGraph(self, request, context):
        """Get dependency graph for organization or entity."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("GetDependencyGraph not yet implemented")
            return graph_pb2.GetDependencyGraphResponse()
        except Exception as e:
            self._handle_exception(context, e, "get_dependency_graph")
            return graph_pb2.GetDependencyGraphResponse()

    def AnalyzeGraph(self, request, context):
        """Analyze graph for issues."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("AnalyzeGraph not yet implemented")
            return graph_pb2.AnalyzeGraphResponse()
        except Exception as e:
            self._handle_exception(context, e, "analyze_graph")
            return graph_pb2.AnalyzeGraphResponse()

    def FindPath(self, request, context):
        """Find path between two entities."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("FindPath not yet implemented")
            return graph_pb2.FindPathResponse()
        except Exception as e:
            self._handle_exception(context, e, "find_path")
            return graph_pb2.FindPathResponse()

    def GetEntityImpact(self, request, context):
        """Get entity impact analysis."""
        try:
            context.set_code(grpc.StatusCode.UNIMPLEMENTED)
            context.set_details("GetEntityImpact not yet implemented")
            return graph_pb2.GetEntityImpactResponse()
        except Exception as e:
            self._handle_exception(context, e, "get_entity_impact")
            return graph_pb2.GetEntityImpactResponse()

    # ========================================================================
    # Health & Status (1 method)
    # ========================================================================

    def HealthCheck(self, request, context):
        """Health check."""
        try:
            return self._create_status_response(
                success=True,
                message="Elder gRPC server is healthy",
                details={"version": "0.1.0", "service": "elder-grpc"}
            )
        except Exception as e:
            self._handle_exception(context, e, "health_check")
            return self._create_status_response(
                success=False,
                message=f"Health check failed: {str(e)}"
            )
